Classic plan cache key encoding of $_internalBucketGeoWithin is missing geometry details

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc4
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Optimization
    • Fully Compatible
    • ALL
    • v8.0
    • QO 2024-04-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We include geometry details for GeoMatchExpression ($within, etc) and GeoNearMatchExpression ($geoNear) needed to distinguish predicates in plan cache entries. This needs to be done similarly for $_internalBucketGeoWithin.

      This is problematic when caching single candidate plans (failure in timeseries_geonear_measurements.js). The plan cache key is the same for two queries, one of which is a "flat" 2d query (cannot use a geospatial index) and the other spherical (can use an index).

            Assignee:
            Jess Balint
            Reporter:
            Jess Balint
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: