SERVER-89480 Classic plan cache key encoding of $_internalBucketGeoWi… (#21429)

GitOrigin-RevId: 2ef95e6e9d15ba506627e05e80cba10e0295e167